--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -20,6 +20,8 @@ test:
 
 production:
   adapter: postgresql
-  database: db/production.sqlite3
+  encoding: unicode
+  database: tvlistings_production
   pool: 5
-  timeout: 5000
+  username: blog
+  password:
